--- a/index.html
+++ b/index.html
@@ -560,13 +560,59 @@
     </div>
     <footer>
         <div class="continer">
-            <img src="images/logo.png" alt="">
-            <h1> Our Social </h1>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-google"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <h3> C 2021 <span>Kaspar </span> All right Reveser</h3>
+
+
+
+            <div class="wrapper">
+                <div class="button">
+                    <div class="icon">
+                        <i class="fab fa-facebook-f">
+
+
+                        </i>
+                    </div>
+                    <span>Facebook</span>
+                </div>
+                <div class="button">
+                    <div class="icon">
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                    <span>Twitter</span>
+                </div>
+                <div class="button">
+                    <div class="icon">
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                    <span>Instagram</span>
+                </div>
+                <div class="button">
+                    <div class="icon">
+                        <i class="fab fa-github"></i>
+                    </div>
+                    <span>Github</span>
+                </div>
+                <div class="button">
+                    <div class="icon">
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                    <span>YouTube</span>
+                </div>
+            </div>
+
+
+            <div class="Social-for-mob">
+
+                <!-- End of buuton for pc -->
+                <img src="images/logo.png" alt="">
+                <h1> Our Social </h1>
+                <a href="https://www.facebook.com/yousef.abdallah.1044186"><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-google"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                <h3> C 2021 <span>Kaspar </span> All right Reveser</h3>
+
+            </div>
+
 
         </div>
 
